Tue Dec  3 23:48:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check malloc_size() available on BSD.

	* gc.c: use malloc_size() with malloc/malloc.h on BSD.

Tue Dec  3 23:06:20 2013  Narihiro Nakamura  <authornari@gmail.com>

	* object.c (rb_obj_clone): don't copy FL_WB_PROTECTED of a
	  original object.

Tue Dec  3 22:32:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_recursive): make similar (recursive) constructs
	  return same hash value.  execute recursively, and rewind to the
	  topmost frame with an object which .eql? to the recursive
	  object, if recursion is detected.

	* hash.c (rb_hash): detect recursion for all `hash' methods.  each
	  `hash' methods no longer need to use rb_exec_recursive().

Tue Dec  3 21:53:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_catch_protect): new function similar to
	  rb_catch_obj(), but protect from all global jumps like as
	  rb_load_protect(), rb_protect(), etc.

Tue Dec  3 20:18:46 2013  Narihiro Nakamura  <authornari@gmail.com>

	* object.c (rb_obj_clone): Protect FL_PROMOTED and FL_WB_PROTECTED
	  flags of a destination object.

Tue Dec  3 20:16:38 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_hash_rehash): use hash_alloc() instead of rb_hash_new(),
	  to hide temprary object from ObjectSpace.  [Bug #9187]

Tue Dec  3 17:11:47 2013  Aman Gupta <ruby@tmm1.net>

	* load.c (features_index_add_single): Move loaded_features_index array values off
	  the ruby heap. [Bug #9201] [ruby-core:58805]
	* load.c (loaded_features_index_clear_i): Clean up off-heap array structure.
	* vm.c (rb_vm_mark): Remove unnecessary mark_tbl for loaded_features_index.
	  This improves minor GC time by 15% in a large application.

Tue Dec  3 17:01:45 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h (struct RClass): Add wrapper struct around
	  RClass->m_tbl with serial. This prevents double marking method